# connectedDots

./: .gitignore  CMakeLists.txt  Makefile  TODO.todo  dots.sublime-workspace
src/: main.c
src/animation/: script.c  script.h
tests/test_scripts/: test.c
